syntax = "proto3";

package rdsec;

option go_package = "gosuda.org/portal/portal/core/proto/rdsec;rdsec";

message Identity {
  string id = 1;
  bytes public_key = 2;
}

enum ProtocolVersion {
  PROTOCOL_VERSION_1 = 0;
}

message ClientInitPayload {
  ProtocolVersion version = 1;
  bytes nonce = 2;
  int64 timestamp = 3;
  Identity identity = 4;
  string alpn = 5;

  bytes session_public_key = 6;
}

message ServerInitPayload {
  ProtocolVersion version = 1;
  bytes nonce = 2;
  int64 timestamp = 3;
  Identity identity = 4;
  string alpn = 5;

  bytes session_public_key = 6;
}
